--- a/index.html
+++ b/index.html
@@ -4,93 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bitforge Software Solutions</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-      color: #333;
-    }
-    header {
-      background-color: #2c3e50;
-      color: white;
-      text-align: center;
-      padding: 1em;
-    }
-    nav {
-      background-color: #34495e;
-      padding: 1em;
-    }
-    nav a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-    }
-    .container {
-      max-width: 1200px;
-      margin: 20px auto;
-      padding: 20px;
-    }
-    .product {
-      background-color: white;
-      padding: 20px;
-      margin-bottom: 20px;
-      border-radius: 5px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    .product h2 {
-      color: #2c3e50;
-    }
-    .btn {
-      background-color: #e74c3c;
-      color: white;
-      padding: 10px 20px;
-      text-decoration: none;
-      border-radius: 5px;
-    }
-    footer {
-      text-align: center;
-      padding: 1em;
-      background-color: #2c3e50;
-      color: white;
-      position: fixed;
-      width: 100%;
-      bottom: 0;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <h1>Bitforge Software Solutions</h1>
-    <p>Your Trusted Software Provider</p>
+    <p>Your Trusted Partner in Software Innovation</p>
   </header>
   <nav>
-    <a href="#home">Home</a>
-    <a href="#products">Products</a>
-    <a href="#contact">Contact</a>
+    <a href="index.html">Home</a>
+    <a href="products.html">Products</a>
+    <a href="contact.html">Contact</a>
+    <a href="privacy.html">Privacy Policy</a>
+    <a href="terms.html">Terms of Service</a>
   </nav>
   <div class="container">
-    <section id="products">
-      <div class="product">
-        <h2>API Integration Suite</h2>
-        <p>Seamless API solutions for your business needs.</p>
-        <a href="#" class="btn">Buy Now - $99</a>
-      </div>
-      <div class="product">
-        <h2>Plugin Development Kit</h2>
-        <p>Custom plugins to enhance your software.</p>
-        <a href="#" class="btn">Buy Now - $79</a>
-      </div>
-      <div class="product">
-        <h2>Addon Manager Pro</h2>
-        <p>Manage and deploy addons efficiently.</p>
-        <a href="#" class="btn">Buy Now - $59</a>
-      </div>
+    <section class="section">
+      <h2>Welcome to Bitforge</h2>
+      <p>At Bitforge, we specialize in delivering cutting-edge software solutions, including robust API integrations, customizable plugins, and efficient addon management tools. Our mission is to empower businesses with technology that drives success.</p>
     </section>
   </div>
   <footer>
-    <p>&copy; 2025 Bitforge. All rights reserved.</p>
+    <p>&copy; 2025 Bitforge. All rights reserved. | <a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Service</a></p>
   </footer>
 </body>
 </html>
