--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
         .smooth-scroll {
             scroll-behavior: smooth;
@@ -18,6 +21,12 @@
         }
         .hover-scale:hover {
             transform: scale(1.05);
+        }
+        main {
+            flex: 1 0 auto;
+        }
+        footer {
+            flex-shrink: 0;
         }
     </style>
 </head>
@@ -40,45 +49,48 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <section id="home" class="min-h-screen flex items-center justify-center bg-gradient-to-r from-indigo-500 to-purple-600 text-white">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <h2 class="text-4xl sm:text-5xl font-bold mb-4">Welcome to Bitforge Software Solutions</h2>
-            <p class="text-lg sm:text-xl mb-6">Your Trusted Partner in Software Innovation</p>
-            <a href="contact.html" class="inline-block bg-white text-indigo-600 font-semibold py-3 px-6 rounded-lg hover:bg-indigo-100 hover-scale">Get Started</a>
-        </div>
-    </section>
+    <!-- Main Content -->
+    <main>
+        <!-- Hero Section -->
+        <section id="home" class="min-h-screen flex items-center justify-center bg-gradient-to-r from-indigo-500 to-purple-600 text-white">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+                <h2 class="text-4xl sm:text-5xl font-bold mb-4">Welcome to Bitforge Software Solutions</h2>
+                <p class="text-lg sm:text-xl mb-6">Your Trusted Partner in Software Innovation</p>
+                <a href="contact.html" class="inline-block bg-white text-indigo-600 font-semibold py-3 px-6 rounded-lg hover:bg-indigo-100 hover-scale">Get Started</a>
+            </div>
+        </section>
 
-    <!-- Services Section -->
-    <section id="services" class="py-20 bg-white">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-3xl font-bold text-center mb-12">Our Services</h2>
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-                <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
-                    <h3 class="text-xl font-semibold mb-4">API Integrations</h3>
-                    <p class="text-gray-600">Seamlessly connect your systems with robust and scalable API solutions tailored to your business needs.</p>
-                </div>
-                <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
-                    <h3 class="text-xl font-semibold mb-4">Customizable Plugins</h3>
-                    <p class="text-gray-600">Enhance your software with bespoke plugins designed to improve functionality and user experience.</p>
-                </div>
-                <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
-                    <h3 class="text-xl font-semibold mb-4">Addon Management Tools</h3>
-                    <p class="text-gray-600">Streamline your operations with efficient tools for managing and optimizing software addons.</p>
+        <!-- Services Section -->
+        <section id="services" class="py-20 bg-white">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                <h2 class="text-3xl font-bold text-center mb-12">Our Services</h2>
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
+                        <h3 class="text-xl font-semibold mb-4">API Integrations</h3>
+                        <p class="text-gray-600">Seamlessly connect your systems with robust and scalable API solutions tailored to your business needs.</p>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
+                        <h3 class="text-xl font-semibold mb-4">Customizable Plugins</h3>
+                        <p class="text-gray-600">Enhance your software with bespoke plugins designed to improve functionality and user experience.</p>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
+                        <h3 class="text-xl font-semibold mb-4">Addon Management Tools</h3>
+                        <p class="text-gray-600">Streamline your operations with efficient tools for managing and optimizing software addons.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- About Section -->
-    <section id="about" class="py-20 bg-gray-50">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-3xl font-bold text-center mb-12">About Bitforge</h2>
-            <p class="text-lg text-gray-600 text-center max-w-3xl mx-auto">
-                At Bitforge, we specialize in delivering cutting-edge software solutions to empower businesses. Our mission is to drive success through innovative technology, providing robust API integrations, customizable plugins, and efficient addon management tools. With a focus on quality and performance, we are your trusted partner in software innovation.
-            </p>
-        </div>
-    </section>
+        <!-- About Section -->
+        <section id="about" class="py-20 bg-gray-50">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                <h2 class="text-3xl font-bold text-center mb-12">About Bitforge</h2>
+                <p class="text-lg text-gray-600 text-center max-w-3xl mx-auto">
+                    At Bitforge, we specialize in delivering cutting-edge software solutions to empower businesses. Our mission is to drive success through innovative technology, providing robust API integrations, customizable plugins, and efficient addon management tools. With a focus on quality and performance, we are your trusted partner in software innovation.
+                </p>
+            </div>
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8">
