--- a/products.html
+++ b/products.html
@@ -9,6 +9,9 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
         .smooth-scroll {
             scroll-behavior: smooth;
@@ -18,6 +21,12 @@
         }
         .hover-scale:hover {
             transform: scale(1.05);
+        }
+        main {
+            flex: 1 0 auto;
+        }
+        footer {
+            flex-shrink: 0;
         }
     </style>
 </head>
@@ -40,35 +49,38 @@
         </div>
     </nav>
 
-    <!-- Products Section -->
-    <section id="products" class="py-20 bg-white pt-32">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <h2 class="text-3xl font-bold text-center mb-12">Our Products</h2>
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
-                <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
-                    <h3 class="text-xl font-semibold mb-4">API Integrations</h3>
-                    <p class="text-gray-600">Our robust API integration solutions enable seamless connectivity between your systems, enhancing efficiency and scalability for your business operations.</p>
-                </div>
-                <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
-                    <h3 class="text-xl font-semibold mb-4">Customizable Plugins</h3>
-                    <p class="text-gray-600">Enhance your software with our tailored plugins, designed to add powerful features and improve user experience with minimal setup.</p>
-                </div>
-                <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
-                    <h3 class="text-xl font-semibold mb-4">Addon Management Tools</h3>
-                    <p class="text-gray-600">Streamline your software ecosystem with our addon management tools, offering intuitive control and optimization for your applications.</p>
+    <!-- Main Content -->
+    <main>
+        <!-- Products Section -->
+        <section id="products" class="py-20 bg-white pt-32">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                <h2 class="text-3xl font-bold text-center mb-12">Our Products</h2>
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
+                        <h3 class="text-xl font-semibold mb-4">API Integrations</h3>
+                        <p class="text-gray-600">Our robust API integration solutions enable seamless connectivity between your systems, enhancing efficiency and scalability for your business operations.</p>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
+                        <h3 class="text-xl font-semibold mb-4">Customizable Plugins</h3>
+                        <p class="text-gray-600">Enhance your software with our tailored plugins, designed to add powerful features and improve user experience with minimal setup.</p>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
+                        <h3 class="text-xl font-semibold mb-4">Addon Management Tools</h3>
+                        <p class="text-gray-600">Streamline your software ecosystem with our addon management tools, offering intuitive control and optimization for your applications.</p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Call to Action -->
-    <section class="py-20 bg-gradient-to-r from-indigo-500 to-purple-600 text-white">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <h2 class="text-3xl font-bold mb-4">Ready to Transform Your Business?</h2>
-            <p class="text-lg mb-6">Explore our products and see how Bitforge can drive your success through innovative software solutions.</p>
-            <a href="contact.html" class="inline-block bg-white text-indigo-600 font-semibold py-3 px-6 rounded-lg hover:bg-indigo-100 hover-scale">Contact Us</a>
-        </div>
-    </section>
+        <!-- Call to Action -->
+        <section class="py-20 bg-gradient-to-r from-indigo-500 to-purple-600 text-white">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+                <h2 class="text-3xl font-bold mb-4">Ready to Transform Your Business?</h2>
+                <p class="text-lg mb-6">Explore our products and see how Bitforge can drive your success through innovative software solutions.</p>
+                <a href="contact.html" class="inline-block bg-white text-indigo-600 font-semibold py-3 px-6 rounded-lg hover:bg-indigo-100 hover-scale">Contact Us</a>
+            </div>
+        </section>
+    </main>
 
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8">
