--- a/products.html
+++ b/products.html
@@ -55,29 +55,105 @@
         <section id="products" class="py-20 bg-white pt-32">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <h2 class="text-3xl font-bold text-center mb-12">Our Products</h2>
-                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+                
+                <!-- Flutter Plugins -->
+                <h3 class="text-2xl font-semibold mb-6">Flutter Plugins</h3>
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mb-12">
                     <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
-                        <h3 class="text-xl font-semibold mb-4">API Integrations</h3>
-                        <p class="text-gray-600">Our robust API integration solutions enable seamless connectivity between your systems, enhancing efficiency and scalability for your business operations.</p>
+                        <h4 class="text-xl font-semibold mb-2">Document Scanner</h4>
+                        <p class="text-gray-600 mb-4">A powerful Flutter plugin for scanning and digitizing documents with real-time edge detection and image processing.</p>
+                        <p class="text-indigo-600 font-bold mb-4">$49.99</p>
+                        <a href="contact.html" class="inline-block bg-indigo-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-indigo-700 hover-scale">Buy Now</a>
                     </div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
-                        <h3 class="text-xl font-semibold mb-4">Customizable Plugins</h3>
-                        <p class="text-gray-600">Enhance your software with our tailored plugins, designed to add powerful features and improve user experience with minimal setup.</p>
+                        <h4 class="text-xl font-semibold mb-2">GPS Detection</h4>
+                        <p class="text-gray-600 mb-4">High-precision GPS detection plugin for Flutter, enabling location-based features with minimal battery usage.</p>
+                        <p class="text-indigo-600 font-bold mb-4">$39.99</p>
+                        <a href="contact.html" class="inline-block bg-indigo-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-indigo-700 hover-scale">Buy Now</a>
                     </div>
                     <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
-                        <h3 class="text-xl font-semibold mb-4">Addon Management Tools</h3>
-                        <p class="text-gray-600">Streamline your software ecosystem with our addon management tools, offering intuitive control and optimization for your applications.</p>
+                        <h4 class="text-xl font-semibold mb-2">VPN Connector</h4>
+                        <p class="text-gray-600 mb-4">Securely integrate VPN functionality into your Flutter app with this easy-to-use plugin for encrypted connections.</p>
+                        <p class="text-indigo-600 font-bold mb-4">$59.99</p>
+                        <a href="contact.html" class="inline-block bg-indigo-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-indigo-700 hover-scale">Buy Now</a>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
+                        <h4 class="text-xl font-semibold mb-2">AR Viewer</h4>
+                        <p class="text-gray-600 mb-4">Enable augmented reality experiences in your Flutter app with this plugin for 3D model rendering and interaction.</p>
+                        <p class="text-indigo-600 font-bold mb-4">$79.99</p>
+                        <a href="contact.html" class="inline-block bg-indigo-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-indigo-700 hover-scale">Buy Now</a>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
+                        <h4 class="text-xl font-semibold mb-2">Push Notifications</h4>
+                        <p class="text-gray-600 mb-4">Integrate real-time push notifications into your Flutter app for enhanced user engagement and updates.</p>
+                        <p class="text-indigo-600 font-bold mb-4">$29.99</p>
+                        <a href="contact.html" class="inline-block bg-indigo-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-indigo-700 hover-scale">Buy Now</a>
                     </div>
                 </div>
-            </div>
-        </section>
 
-        <!-- Call to Action -->
-        <section class="py-20 bg-gradient-to-r from-indigo-500 to-purple-600 text-white">
-            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-                <h2 class="text-3xl font-bold mb-4">Ready to Transform Your Business?</h2>
-                <p class="text-lg mb-6">Explore our products and see how Bitforge can drive your success through innovative software solutions.</p>
-                <a href="contact.html" class="inline-block bg-white text-indigo-600 font-semibold py-3 px-6 rounded-lg hover:bg-indigo-100 hover-scale">Contact Us</a>
+                <!-- WordPress Plugins -->
+                <h3 class="text-2xl font-semibold mb-6">WordPress Plugins</h3>
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 mb-12">
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
+                        <h4 class="text-xl font-semibold mb-2">Point of Sale (POS)</h4>
+                        <p class="text-gray-600 mb-4">Transform your WordPress site into a fully functional POS system for in-store and online transactions.</p>
+                        <p class="text-indigo-600 font-bold mb-4">$99.99</p>
+                        <a href="contact.html" class="inline-block bg-indigo-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-indigo-700 hover-scale">Buy Now</a>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
+                        <h4 class="text-xl font-semibold mb-2">Security Shield</h4>
+                        <p class="text-gray-600 mb-4">Protect your WordPress site with advanced security features, including firewall, malware scanning, and login protection.</p>
+                        <p class="text-indigo-600 font-bold mb-4">$69.99</p>
+                        <a href="contact.html" class="inline-block bg-indigo-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-indigo-700 hover-scale">Buy Now</a>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
+                        <h4 class="text-xl font-semibold mb-2">SEO Optimizer</h4>
+                        <p class="text-gray-600 mb-4">Boost your WordPress site’s search engine rankings with automated SEO tools and analytics integration.</p>
+                        <p class="text-indigo-600 font-bold mb-4">$49.99</p>
+                        <a href="contact.html" class="inline-block bg-indigo-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-indigo-700 hover-scale">Buy Now</a>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
+                        <h4 class="text-xl font-semibold mb-2">E-Commerce Booster</h4>
+                        <p class="text-gray-600 mb-4">Enhance your WordPress store with advanced e-commerce features like cart recovery and product recommendations.</p>
+                        <p class="text-indigo-600 font-bold mb-4">$89.99</p>
+                        <a href="contact.html" class="inline-block bg-indigo-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-indigo-700 hover-scale">Buy Now</a>
+                    </div>
+                </div>
+
+                <!-- APIs -->
+                <h3 class="text-2xl font-semibold mb-6">APIs</h3>
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
+                        <h4 class="text-xl font-semibold mb-2">Geofencing API</h4>
+                        <p class="text-gray-600 mb-4">Enable location-based services with our Geofencing API, perfect for triggering actions based on user location.</p>
+                        <p class="text-indigo-600 font-bold mb-4">$199.99</p>
+                        <a href="contact.html" class="inline-block bg-indigo-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-indigo-700 hover-scale">Buy Now</a>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
+                        <h4 class="text-xl font-semibold mb-2">GPS Tracker API</h4>
+                        <p class="text-gray-600 mb-4">Track real-time location data with our GPS Tracker API, designed for logistics and navigation applications.</p>
+                        <p class="text-indigo-600 font-bold mb-4">$149.99</p>
+                        <a href="contact.html" class="inline-block bg-indigo-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-indigo-700 hover-scale">Buy Now</a>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
+                        <h4 class="text-xl font-semibold mb-2">Database Sync API</h4>
+                        <p class="text-gray-600 mb-4">Seamlessly synchronize data across platforms with our high-performance Database Sync API.</p>
+                        <p class="text-indigo-600 font-bold mb-4">$179.99</p>
+                        <a href="contact.html" class="inline-block bg-indigo-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-indigo-700 hover-scale">Buy Now</a>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
+                        <h4 class="text-xl font-semibold mb-2">Payment Gateway API</h4>
+                        <p class="text-gray-600 mb-4">Integrate secure payment processing into your applications with our versatile Payment Gateway API.</p>
+                        <p class="text-indigo-600 font-bold mb-4">$129.99</p>
+                        <a href="contact.html" class="inline-block bg-indigo-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-indigo-700 hover-scale">Buy Now</a>
+                    </div>
+                    <div class="bg-gray-100 p-6 rounded-lg shadow-md hover-scale">
+                        <h4 class="text-xl font-semibold mb-2">Analytics API</h4>
+                        <p class="text-gray-600 mb-4">Gain insights into user behavior with our Analytics API, offering robust data tracking and reporting tools.</p>
+                        <p class="text-indigo-600 font-bold mb-4">$99.99</p>
+                        <a href="contact.html" class="inline-block bg-indigo-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-indigo-700 hover-scale">Buy Now</a>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
